menu header footer

--- a/wp-content/themes/pandenor/src/sass/_variables.sass
+++ b/wp-content/themes/pandenor/src/sass/_variables.sass
@@ -1,13 +1,11 @@
-$orange: #FE602A
-$grey: #505050
-$light-grey: #C9C9C9
+$blue: #2d3580
+$red: #e10a17
+$grey: #747474
+$light-grey: #f6f6f6
 
-$montserrat: 'Montserrat', sans-serif
-$dinpro-light: 'DINPro Light'
-$dinpro-medium: 'DINPro Medium'
-$dinpro-bold: 'DINPro Bold'
-$dinpro-black: 'DINPro Black'
+$noah-regular: 'noah-regular'
+$noah-bold: 'noah-bold'
 
 /* bootstrap override */
-$theme-colors: ("primary": $orange, "secondary": $grey)
+$theme-colors: ("primary": $blue, "secondary": $red)
 
