--- a/wp-content/themes/pandenor/src/sass/_footer.sass
+++ b/wp-content/themes/pandenor/src/sass/_footer.sass
@@ -28,4 +28,13 @@ footer
         font-size: 12px
         span
             font-family: $noah-bold
+
+@media (max-width: 996px )
+    footer
+        border-top: 20px solid $red
+        .footer-logo-wrapper
+            top: -75px
+            width: 200px
+            .footer-logo
+                width: 50px
         
