--- a/wp-content/themes/pandenor/src/sass/_navbar.sass
+++ b/wp-content/themes/pandenor/src/sass/_navbar.sass
@@ -33,6 +33,7 @@
 .brand-logo-m
     width: 60px
 .brand-wrapper
+    z-index: 10
     position: absolute
     left: 50%
     transform: translate(-50%)
