ajustes na home

--- a/wp-content/themes/pandenor/src/sass/_footer.sass
+++ b/wp-content/themes/pandenor/src/sass/_footer.sass
@@ -14,15 +14,16 @@ footer
             transform: translate(-50%)
     h4
         font-family: $noah-bold
-        font-size: 25px
+        font-size: 20px
     .btn-footer
+        font-family: $noah-bold
         background-color: white
         color: $red
-        font-size: 20px
+        font-size: 16px
         border-radius: 30px
         padding: 10px 55px
     .copyright
-        height: 84px
+        height: 54px
         background: #4d4d4d
         font-family: $noah-regular
         font-size: 12px
