--- a/wp-content/themes/pandenor/src/sass/app.sass
+++ b/wp-content/themes/pandenor/src/sass/app.sass
@@ -4,7 +4,6 @@
 @import 'mixins'
 @import 'forms'
 @import 'navbar'
-@import 'header-carousel'
 @import 'default-page'
 @import 'footer'
 
@@ -14,7 +13,7 @@
 
 body
     overflow-x: hidden
-    font-size: 20px
+    font-size: 16px
 
 #slider
     .item
@@ -24,18 +23,18 @@ body
             font-family: $noah-regular
             color: $red
             h2
-                font-size: 30px
+                font-size: 25px
         .header-link
-            width: 135px
+            width: 140px
             font-family: $noah-bold
             background-color: $blue
             color: white
             border-radius: 0px 50px 50px 50px
             position: relative
-            right: -135px
+            right: -139px
 .title
     font-family: $noah-bold
-    font-size: 55px
+    font-size: 35px
     color: $blue
 .title-sm
     font-family: $noah-bold
@@ -79,7 +78,7 @@ body
 .grey-list
     color: #666b6f
     font-family: $noah-regular
-    font-size: 22px
+    font-size: 18px
     span
         font-family: $noah-bold
 
@@ -100,6 +99,21 @@ body
     border-radius: 50px
     padding-left:  25px
     padding-right:  25px
+.btn-outline
+    font-family: $noah-regular
+    font-size: 22px
+    color: $blue
+    background: white
+    border: 2px solid $blue
+    border-radius: 20px
+    padding-left:  25px
+    padding-right:  25px
+    &.active
+        background: $blue
+        color: white
+
+.forminator-button
+    width: 250px !important
 
 @media (max-width: 996px)
     #slider
