--- a/wp-content/themes/pandenor/src/sass/_navbar.sass
+++ b/wp-content/themes/pandenor/src/sass/_navbar.sass
@@ -3,7 +3,7 @@
     background: $light-grey
 .secondary-nav
     position: absolute
-    top: 82px
+    top: 0
     width: 100%
     height: 82px
     .left-side
