--- a/wp-content/themes/pandenor/src/sass/app.sass
+++ b/wp-content/themes/pandenor/src/sass/app.sass
@@ -85,7 +85,7 @@ body
 .top-spacing
     padding-top: 120px
 .bottom-spacing
-    padding-bottom: 120px
+    padding-bottom: 500px
 
 .rounded-card
     border-radius: 50px 50px 50px 0px
@@ -116,6 +116,8 @@ body
     width: 250px !important
 
 @media (max-width: 996px)
+    .bottom-spacing
+        padding-bottom: 120px
     #slider
         .item
             .header-link
